--- a/client/index.html
+++ b/client/index.html
@@ -5,7 +5,14 @@
   <meta charset="UTF-8" />
   <link rel="icon" type="image/svg+xml" href="/vite.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Vite + React</title>
+
+  <link rel="icon" href="/favicon.ico" />
+  <link rel="manifest" href="/manifest.json" />
+  <link rel="apple-touch-icon" href="/logo192.png" />
+  <meta name="theme-color" content="#000000" />
+
+
+  <title>ChatVista</title>
 </head>
 
 <body>
