--- a/client/public/offline.html
+++ b/client/public/offline.html
@@ -4,100 +4,45 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Offline Message</title>
-    <link rel="stylesheet" href="style.css">
+    <title>React PWA Template</title>
+    <style type="text/css">
+        html {
+            height: 100%;
+        }
+
+        body {
+            height: 100%;
+            margin: 0;
+            background: #0a1f44;
+            display: flex;
+            align-items: center;
+            text-align: center;
+            justify-content: center;
+        }
+
+        .main {
+            align-items: center;
+            width: 80%;
+            display: flex;
+            justify-content: center;
+            flex-direction: column;
+            padding: 40px 8%;
+            border-radius: 20px;
+            background: #fff;
+        }
+
+        .name {
+            font-size: 2em;
+        }
+    </style>
 </head>
 
 <body>
-    <style>
-        body {
-            background-color: #f3f3f3;
-            font-family: sans-serif;
-            text-align: center;
-            margin: 0;
-            padding: 20px;
-        }
-
-        .offline-message {
-            width: 80%;
-            max-width: 400px;
-            background-color: #fff;
-            border-radius: 10px;
-            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
-            margin: 0 auto;
-            padding: 30px;
-        }
-
-        .icon {
-            font-size: 50px;
-            color: #2c77df;
-            margin-bottom: 20px;
-        }
-
-        .icon i {
-            animation: spin 2s linear infinite;
-        }
-
-        @keyframes spin {
-            0% {
-                transform: rotate(0deg);
-            }
-
-            100% {
-                transform: rotate(360deg);
-            }
-        }
-
-        h1 {
-            font-size: 1.8rem;
-            margin-bottom: 10px;
-        }
-
-        p {
-            font-size: 1rem;
-            line-height: 1.5;
-        }
-
-        button {
-            background-color: #2c77df;
-            color: #fff;
-            border: none;
-            padding: 10px 20px;
-            font-size: 1rem;
-            border-radius: 5px;
-            cursor: pointer;
-        }
-
-        button:hover {
-            background-color: #2062bf;
-        }
-    </style>
-    <div class="offline-message">
-        <div class="icon"><i class="fas fa-wifi"></i></div>
-        <h1>Currently Offline</h1>
-        <p>This application requires an internet connection to function properly. Please check your network settings and
-            try again.</p>
-        <button>Retry</button>
+    <div class="main">
+        <h2 class="name">
+            <span>You are offline. Please go online</span>
+        </h2>
     </div>
-    <script src="script.js"></script>
 </body>
 
 </html>
-
-<script>
-    // Check for online/offline status and toggle the offline message accordingly
-    window.addEventListener('online', () => {
-        document.querySelector('.offline-message').style.display = 'none';
-    });
-
-    window.addEventListener('offline', () => {
-        document.querySelector('.offline-message').style.display = 'block';
-    });
-
-    // Add functionality to the "Retry" button (if desired)
-    const retryButton = document.querySelector('button');
-    retryButton.addEventListener('click', () => {
-        // Implement retry logic here, e.g., reload the page or check for network changes
-    });
-
-</script>
